# unfinished-lang

./: Cargo.toml  README.md  rules
examples/: errors.unf  find.unf  linked_list.unf  test.unf
lib/ast/: Cargo.toml
lib/ast/src/: assign.rs  ast.rs  binop.rs  block.rs  break_expr.rs  call.rs  continue_expr.rs  data_class.rs  data_class_instance.rs  data_struct.rs  data_struct_instance.rs  expression.rs  function.rs  get_index.rs  get_property.rs  grouping.rs  identifier.rs  if_conditional.rs  implicit_return.rs  index.rs  let_expr.rs  let_ref.rs  let_stmt.rs  lib.rs  literal.rs  logic.rs  loop_expr.rs  mut_visit.rs  program.rs  return_expr.rs  self_expr.rs  set_index.rs  set_property.rs  statement.rs  types.rs  unaryop.rs  visit.rs
lib/ast/src/ast/: assign.rs  binop.rs  block.rs  break_expr.rs  call.rs  continue_expr.rs  data_struct.rs  data_struct_instance.rs  expression.rs  function.rs  get_index.rs  get_property.rs  grouping.rs  identifier.rs  if_conditional.rs  implicit_return.rs  let_expr.rs  let_ref.rs  literal.rs  logic.rs  loop_expr.rs  program.rs  return_expr.rs  (+4 more)
lib/ast_hir/: Cargo.toml
lib/ast_hir/src/: lib.rs  lowering.rs
lib/ast_passes/: Cargo.toml
lib/ast_passes/src/: errors.rs  lib.rs  name_resolver.rs  scope_table.rs  semantic_analyzer.rs
lib/hir/: Cargo.toml
lib/hir/src/: hir.rs  lib.rs  mut_visit.rs  visit.rs
lib/interpreter/: Cargo.toml
lib/interpreter/src/: environment.rs  interpreter.rs  lib.rs  value.rs
lib/interpreter/src/natives/: builtin.rs
lib/parser/: Cargo.toml
lib/parser/src/: analyzer.rs  lib.rs  mut_visit.rs  parser.rs  parser_error.rs  scanner.rs  span.rs  test_utils.rs  visit.rs  visit_mut.rs
lib/parser/src/ast/: assign.rs  binop.rs  call.rs  data_struct.rs  expression.rs  function.rs  get_index.rs  identifier.rs  if_conditional.rs  let_expr.rs  let_ref.rs  literal.rs  logic.rs  unaryop.rs
lib/parser/src/passes/: analyzer.rs  errors.rs  mod.rs  semantic_analyzer.rs
lib/parser/src/scanner/: scanner.rs  token.rs  token_type.rs
lib/parser_passes/: Cargo.toml
lib/parser_passes/src/: errors.rs  lib.rs  name_resolver.rs  reorder_named_args.rs  scope_table.rs  semantic_analyzer.rs
lib/scanner/: Cargo.toml
lib/scanner/src/: lib.rs  position.rs  scanner.rs  token.rs  token_type.rs
lib/span_util/: Cargo.toml
lib/span_util/src/: lib.rs  span.rs  with_span.rs
lib/spanner/: Cargo.toml
lib/spanner/src/: span.rs
lib/type_core/: Cargo.toml
lib/type_core/src/: lib.rs  type.rs
lib/typechecker/: Cargo.toml
lib/typechecker/src/: env.rs  lib.rs  synth.rs  type_error.rs  types.rs
