[package]
name = "interpreter"
version = "0.1.0"
authors = ["oscar <oscaroox@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path="../ast" }
parser = { path="../parser" }
span_util = { path="../span_util" }
type_core = { path="../type_core" }