[package]
name = "parser"
version = "0.1.0"
authors = ["oscar <oscaroox@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
ast = { path = "../ast" }
scanner = { path = "../scanner" }
span_util = { path = "../span_util" }
ariadne = "0.1.3"
