[package]
name = "parser_passes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.1.5"
thiserror = "1.0"
parser = { path = '../parser' }
id-arena = { version = "2" }
span_util = { path = "../span_util" }
ast = { path = '../ast' }

[dev-dependencies]
parser = { path = '../parser', features = ["test-utils"] }


pretty_assertions = "1.3.0"
