[package]
name = "typechecker"
version = "0.1.0"
authors = ["oscar <oscaroox@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
span_util = { path = "../span_util" }
type_core = { path = "../type_core" }

thiserror = "1.0"
ariadne = "0.1.5"